2001-09-17  Vladimir Vukicevic  <vladimir@ximian.com>

	* src/libsoup/soup-socket.c, src/libsoup/soup-socket.h:
	Added soup_address_copy().  Changed soup_address_new to check
	whether the ports are the same before using a cached
	address.

2001-09-12  Alex Graveley  <alex@ximian.com>

	* src/soup-wsdl/Makefile.am (soup_wsdl_LDADD): Remove libwsdl.so
	link.

	* src/libwsdl/Makefile.am (libwsdl_build_a_SOURCES): Include
	libwsdl.so sources in libwsdl-build.a so libtool 1.3.5 doesn't
	ill.  Remove libwsdl_build_a_LIBADD.

2001-08-30  Alex Graveley  <alex@ximian.com>

	* src/soup-wsdl/Makefile.am (soup_wsdl_LDADD): Link with
	libwsdl.so and libwsdl-build.a.

	* src/libwsdl/Makefile.am (libwsdlinclude_HEADERS): Dont install
	wsdl-typecodes-c.h. Make libwsdl-build a static lib.
	(libwsdl_build_a_SOURCES): Remove everthing but wsdl-typecodes-c.[ch].
	(libwsdl_build_a_LIBADD): Depend on libwsdl.

2001-08-29  Alex Graveley  <alex@ximian.com>

	* build/soup_ssl_proxy.dsp: 
	* build/soup_httpd.dsp: 
	* build/libsoupwsdl.dsp: 
	* build/libsoupapache.dsp: 
	* build/libsoup.dsp: Update for new layout.

2001-08-29  Alex Graveley  <alex@ximian.com>

	* src/*/*.h: Fix headers for new layout.
	* tests/*.c: Ditto.

	* tests/Makefile.am (LDFLAGS): Use libtool to link with built
	libsoup and libwsdl.
	(libstockquote2_la_LIBADD): Ditto for libsoup-apache.

	* tests/stockquote2.wsdl: Indent prettily.

	* src/Makefile.am (SUBDIRS): Update for new source layout.

	* configure.in (SOUP_INCLUDEDIR): Use @includedir@/soup.
	(SOUP_WSDL_LIBS): include $SOUP_LIBS.
	(CFLAGS): Add Makefiles for new layout.

	* soup-config.in: Use @includedir@/soup.

	* soup.pc.in (Cflags): Use @includedir@/soup.

2001-08-28  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-socket.c (soup_address_new): Perform deep
	unix magic in order to identify if we are running in a
	debugger. This is needed because gdb causes segfaults in child
	processes that load shlibs due to breakpoints being left over in