@@ -13,7 +13,7 @@ AC_SUBST(SOUP_REVISION)
 AC_SUBST(SOUP_AGE)
 
 # Update in src/soup-core/soup-private.h for Windows
-AM_INIT_AUTOMAKE(soup, 0.5.0)
+AM_INIT_AUTOMAKE(soup, 0.5.1)
 
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
